# shotover-custom-transforms-template

./: Cargo.toml  readme.md
.github/workflows/: build_and_test.yaml
kafka-fetch-rewrite/: Cargo.toml
kafka-fetch-rewrite/src/: lib.rs
redis-get-rewrite/: Cargo.toml
redis-get-rewrite/src/: lib.rs
shotover-bin/: Cargo.toml
shotover-bin/kafka-fetch-rewrite-config/: docker-compose.yaml  topology.yaml
shotover-bin/src/: main.rs
shotover-bin/tests/: test.rs
shotover-bin/tests/kafka/: mod.rs
shotover-bin/tests/redis/: mod.rs
shotover-bin/tests/valkey/: mod.rs
valkey-get-rewrite/: Cargo.toml
valkey-get-rewrite/src/: lib.rs
