[package]
name = "shotover-bin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shotover.workspace = true
redis-get-rewrite = { path = "../redis-get-rewrite" }
kafka-fetch-rewrite = { path = "../kafka-fetch-rewrite" }

[dev-dependencies]
tokio-bin-process = "0.4.0"
docker-compose-runner = "0.2.0"
tokio = { version = "1.28.0", features = ["full", "macros"] }
redis = { version = "0.23.0", features = ["tokio-comp", "cluster"] }
rdkafka = "0.34.0"